# yara-rest

./: .gitignore  .gitmodules  CMakeLists.txt  Changes.md  Dockerfile  Makefile  README.md  docker_openapi.sh  generate_server.sh  local_openapi.sh  project_meta_h.tmpl  yara_openapi.yaml
conf/: config.yaml
implementation/: Configurator.h  DefaultApiImpl.cpp  DefaultApiImpl.h  ProjectMeta.h  ProjectMeta.hpp  ScannerThreadLocal.cpp  ScannerThreadLocal.h  YaraCompiler.cpp  YaraCompiler.h  YaraHelpers.cpp  YaraHelpers.h  YaraHelpers.hpp  YaraManager.cpp  YaraManager.h  YaraScanner.cpp  YaraScanner.h  YaraTypes.cpp  YaraTypes.h  main-api-server.cpp  version.h  yara_scanner_copy.cpp  yara_scanner_copy.h
test/: CMakeLists.txt  test.c
test/resources/: detect_demand.yar  pay_immediately.txt
